Move project to Java 21
* Update build scripts and docs
* Move module-info.java file